[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "piedomains"
version = "0.5.0"
description = "Predict categories based on domain names and their content"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Rajashekar Chintalapati", email = "rajshekar.ch@gmail.com"},
    {name = "Gaurav Sood", email = "gsood07@gmail.com"}
]
keywords = [
    "domain classification",
    "website categorization",
    "machine learning",
    "content analysis",
    "web scraping",
    "computer vision"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Utilities"
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "beautifulsoup4>=4.10.0",
    "playwright>=1.40.0",
    "Pillow>=10.0.0",
    "joblib>=1.2.0",
    "tqdm>=4.64.0",
    "nltk>=3.8",
    "tensorflow>=2.12.0",
    "litellm>=1.55.0",
    "requests>=2.25.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "psutil>=5.9.0",
    "ruff>=0.7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "pytest-mock>=3.10",
    "ruff>=0.7.0",
    "mypy>=1.0",
    "black>=24.0",
    "isort>=5.0",
    "pre-commit>=3.0",
    "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/themains/piedomains"
Documentation = "https://themains.github.io/piedomains/"
Repository = "https://github.com/themains/piedomains"
Issues = "https://github.com/themains/piedomains/issues"
Changelog = "https://github.com/themains/piedomains/blob/main/CHANGELOG.md"

[project.scripts]
classify_domains = "piedomains.domain:main"

[tool.hatch.build]
exclude = [
    "/.github",
    "/.venv",
    "/docs",
    "/tests",
    "/.gitignore",
    "/.pre-commit-config.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["piedomains"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "docs",
    ".eggs",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/*" = ["S101"]  # use of assert

[tool.ruff.lint.isort]
known-first-party = ["piedomains"]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py311", "py312"]

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["piedomains"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=piedomains",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "ml: marks tests that require ML models (TensorFlow)",
    "basic: marks tests that don't require ML models",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "performance: marks tests that benchmark performance",
]

# mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Coverage configuration
[tool.coverage.run]
source = ["piedomains"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Deptry configuration
[tool.deptry]
extend_exclude = [
    "notebooks",
    "examples",
    "docs",
    "tests",
    "piedomains/scripts"
]
pep621_dev_dependency_groups = ["test", "docs", "dev"]
# Use per-rule ignores for specific dependency issues
[tool.deptry.per_rule_ignores]
DEP002 = ["scikit-learn"]  # Used via joblib for loading calibrated models
DEP004 = ["pytest"]        # Test framework used in tests directory

[tool.deptry.package_module_name_map]
pillow = "PIL"
beautifulsoup4 = "bs4"
scikit-learn = "sklearn"
